feat: add Firebase setup with emulator suite and dev scripts
- Configure Firebase project (Auth, Firestore, Storage) for Android
- Add firebase_core, firebase_auth, cloud_firestore, firebase_storage deps
- Generate firebase_options.dart via flutterfire configure
- Set up Firebase Emulator Suite (Auth:9099, Firestore:8080, Storage:9199)
- Wire emulator connection in debug builds via --dart-define
- Add Firestore/Storage security rules (user-scoped)
- Create dev helper scripts: check, dev_emulators, dev_app

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ Thumbs.db
 
 # === Firebase emulator data (local-only) ===
 firebase/emulators/
+firebase/*-debug.log
+firebase/ui-debug.log
 
 # === Dart/Flutter tooling ===
 .dart_tool/
