--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   # UI
   cupertino_icons: ^1.0.8
   uuid: ^4.5.2
+  firebase_core: ^4.4.0
+  firebase_auth: ^6.1.4
+  cloud_firestore: ^6.1.2
+  firebase_storage: ^13.0.6
 
 dev_dependencies:
   flutter_test:
