feat: add Firebase authentication with screens, controller, and tests
Implement Phase 7 — full authentication layer:
- FirebaseAuthDataSource wrapping FirebaseAuth + GoogleSignIn
- AuthRepositoryImpl mapping Firebase exceptions to typed AuthFailure
- Riverpod providers: authStateProvider, currentUserProvider, isAuthenticatedProvider
- Auth screens: sign-in, sign-up, forgot-password with form validation
- AuthController (StateNotifier) managing loading/error states
- go_router auth guard wired to real auth state
- 60 tests: repository (30), controller (15), screen widgets (15)

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_auth: ^6.1.4
   cloud_firestore: ^6.1.2
   firebase_storage: ^13.0.6
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +48,9 @@ dev_dependencies:
 
   # Testing
   mocktail: ^1.0.4
+  firebase_auth_mocks: ^0.15.1
+  google_sign_in_mocks: ^0.3.0
+  mock_exceptions: ^0.8.2
 
 flutter:
   uses-material-design: true
