--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -51,6 +51,7 @@ dev_dependencies:
   firebase_auth_mocks: ^0.15.1
   google_sign_in_mocks: ^0.3.0
   mock_exceptions: ^0.8.2
+  fake_cloud_firestore: ^4.0.1
 
 flutter:
   uses-material-design: true
