--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   # Local database
   drift: ^2.25.0
   drift_flutter: ^0.2.4
+  path: ^1.9.1
+  path_provider: ^2.1.5
 
   # UI
   cupertino_icons: ^1.0.8
@@ -30,6 +32,7 @@ dependencies:
   firebase_core: ^4.4.0
   firebase_auth: ^6.1.4
   cloud_firestore: ^6.1.2
+  connectivity_plus: ^6.0.3
   firebase_storage: ^13.0.6
   google_sign_in: ^6.3.0
 
