--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   connectivity_plus: ^6.0.3
   firebase_storage: ^13.0.6
   google_sign_in: ^6.3.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
