--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   firebase_storage: ^13.0.6
   google_sign_in: ^6.3.0
   image_picker: ^1.1.2
+  shared_preferences: ^2.2.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
