ci: add integration tests and stabilize router tests
Add integration_test entry point covering auth UI rendering
and sign-up navigation without Firebase emulator dependency.
Introduce GitHub Actions Flutter CI (format, analyze, tests,
coverage upload) and add integration_test dev dependency.
Stabilize router tests with authenticated overrides and
settings text assertion updates; update Phase 13 progress.

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -53,6 +53,8 @@ dev_dependencies:
   drift_dev: ^2.25.0
 
   # Testing
+  integration_test:
+    sdk: flutter
   mocktail: ^1.0.4
   firebase_auth_mocks: ^0.15.1
   google_sign_in_mocks: ^0.3.0
